# NLPsych

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
pretrained_models/spkrec-xvect-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
src/application/generate_synth_data/: generate_synth_data.py
src/clinicalspeech/: train_models.py  utils.py
src/clinicalspeech/audio/base/: __init__.py  dataloader.py  evaluator.py  trainer.py  utils.py
src/clinicalspeech/audio/baselines/: baseline_model.py  baseline_trainer.py  dataloader.py  embedding_fns.py  embeddings_fns.py  evaluate_baseline.py  model.py  run_training.py  utils.py
src/clinicalspeech/audio/dataloaders/: torch_dataloader.py
src/clinicalspeech/audio/wav2vec/: dataloader.py  model.py  trainer.py
src/clinicalspeech/config/: default_config.yaml
src/clinicalspeech/config/audio/: default_config.yaml
src/clinicalspeech/config/data/: default_config.yaml  synth_data.yaml
src/clinicalspeech/config/ensemble/: default_config.yaml
src/clinicalspeech/config/project/: test_config.yaml
src/clinicalspeech/config/text/: default_config.yaml
src/clinicalspeech/text/baselines/: evaluate_baseline.py  preprocess_fns.py
